      of a table and another join involving the same table.  messed
      up ORM decision making [ticket:593]
    - added Interval type to types.py [ticket:595]
- mysql
    - added 'fields' to reserved words [ticket:590]
- oracle
    - datetime fixes: got subsecond TIMESTAMP to work [ticket:604],
      added OracleDate which supports types.Date with only year/month/day
- sqlite
    - sqlite better handles datetime/date/time objects mixed and matched
      with various Date/Time/DateTime columns
    - string PK column inserts dont get overwritten with OID [ticket:603] 
- extensions
    - added selectone_by() to assignmapper
    
0.3.8
- engines
    - added detach() to Connection, allows underlying DBAPI connection
      to be detached from its pool, closing on dereference/close()
      instead of being reused by the pool.
    - added invalidate() to Connection, immediately invalidates the
      Connection and its underlying DBAPI connection.
- sql
    - _Label class overrides compare_self to return its ultimate
      object. meaning, if you say someexpr.label('foo') == 5, it
      produces the correct "someexpr == 5".
    - _Label propigates "_hide_froms()" so that scalar selects
      behave more properly with regards to FROM clause #574 
    - fix to long name generation when using oid_column as an order by
      (oids used heavily in mapper queries)
    - significant speed improvement to ResultProxy, pre-caches
      TypeEngine dialect implementations and saves on function calls
      per column
    - parenthesis are applied to clauses via a new _Grouping
      construct. uses operator precedence to more intelligently apply
      parenthesis to clauses, provides cleaner nesting of clauses
      (doesnt mutate clauses placed in other clauses, i.e. no 'parens'
      flag)
    - added 'modifier' keyword, works like func.<foo> except does not
      add parenthesis.  e.g. select([modifier.DISTINCT(...)]) etc.